@@ -34,15 +34,5 @@
 #
 ############################################################################
 
-POFF_ASRCS		= 
-POFF_CSRCS		= pfhandle.c pfproghandle.c pftprog.c \
-			  pfsymhandle.c pftsymbol.c pofferr.c \
-			  pfwhdr.c pfwrodata.c pfwsymbol.c pfwfname.c \
-			  pfwprog.c pfwlineno.c pfwdbgfunc.c pfwreloc.c pfwstring.c \
-			  pfwrite.c pfrhdr.c pfrsymbol.c pfrfname.c \
-			  pfrprog.c pfrlineno.c pfrdbgfunc.c pfrrawlineno.c \
-			  pfrrawreloc.c pfrstring.c pfread.c pfrseek.c \
-			  pfrelease.c pfdbgcontainer.c pfdbgdiscard.c \
-			  pfxprog.c pfxrodata.c pfiprog.c pfirodata.c \
-			  pfdhdr.c pfdsymbol.c pfdreloc.c pflabel.c \
-			  pflineno.c pfdbginfo.c
+PAS_ASRCS		= 
+PAS_CSRCS		= psignextend16.c
